(DO NOT SUBMIT) I have a typo
Change-Id: Ifc3fb2d6695ff4003cc1e03f07dfec4981d7168b

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 operations/mediawiki-config.git
+kafak
 -------------------------------
 
 Files in this repository are almost a mirror of the Wikimedia Foundation
